# error-hub

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
configuration/: .env.example  Dockerfile
src/: __main__.py  wsgi.py
src/application/problem/interfaces/: reader.py  repo.py  service.py
src/domain/services/: problem.py
src/infrastructure/config/: config.py  setups.py
src/infrastructure/db/drivers/: mongo.py
src/infrastructure/db/repositories/: problem.py
src/infrastructure/db/repositories/problem/: reader.py  repo.py
src/infrastructure/hashing/: hash_calculator.py
src/presentation/api/resources/: __init__.py
src/presentation/api/resources/v1/problem/: problem.py
